# view_registration

./: CMakeLists.txt  package.xml
include/additional_view_registration_server/: additional_view_registration_optimizer.h  sift_wrapper.h
src/: additional_view_registration_optimizer.cpp  sift_wrapper.cpp  test_registration.cpp
